fixed spacing issue in search component

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -79,10 +79,6 @@
   text-decoration: underline;
 }
 
-.song-info {
-  min-width: 400px;
-}
-
 .search-labels {
   display: flex;
   justify-content: space-between;
