--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -62,7 +62,8 @@
   align-items: center;
   height: 54px;
   color: #b3b3b3;
-  
+  width: 600px;
+
   > a {
     color: #b3b3b3;
     width: 36px;
